[package]
name = "traffic-forwarder-b"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-tcp-sockets = { branch = "0.1.6", git = "https://github.com/MyJetTools/my-tcp-sockets.git" }
rust-extensions = { branch = "0.1.1", git = "https://github.com/MyJetTools/rust-extensions.git" }
traffic-forwarder-shared = { branch = "0.1.0", git = "https://github.com/MyJetTools/traffic-forwarder-shared.git" }
my-logger = { branch = "0.2.0", git = "https://github.com/MyJetTools/my-logger.git" }

flurl = { branch = "0.2.1", git = "https://github.com/MyJetTools/fl-url.git" }
my-settings-reader = { branch = "0.1.1", git = "https://github.com/MyJetTools/my-settings-reader.git" }

tokio = { version = "*", features = ["full"] }
tokio-util = "*"
async-trait = "*"
serde = "*"
serde_yaml = "*"
serde_derive = "*"
